[package]
name = "merkle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.2"
rust-crypto = "0.2.36"
bincode = "1.3.3"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
thiserror = "1"
hex = "0.4"